Fix SIMD loop stop condition for length=0 https://bugs.webkit.org/show_bug.cgi?id=245017 <rdar://99768369>

Reviewed by Mark Lam.

We should stop the loop when the remaining length becomes zero.
Tested via guarded malloc bots.

* Source/WTF/wtf/text/StringCommon.cpp:
(WTF::find16AlignedImpl):
(WTF::find32AlignedImpl):
(WTF::find64AlignedImpl):
(WTF::findFloatAlignedImpl):
(WTF::findDoubleAlignedImpl):
(WTF::find8NonASCIIAlignedImpl):
(WTF::find16NonASCIIAlignedImpl):

Canonical link: https://commits.webkit.org/254349@main